Finalise API, get example fully working
